# genevector

./: .gitattributes  .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  MANIFEST.in  README.md  data.py  embedding.py  model.py  mouse_cellatlas.vec  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_version.py
.github/workflows/: release.yml  tests.yml
compass/: data.py  embedding.py  model.py
data/: mouse_cellatlas.ipynb
docker/: Dockerfile  celltype_assignment.py  markers.yaml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/source/: backends.rst  changelog.rst  citation.rst  genevector.rst  installation.rst  modules.rst  quickstart.rst  targets.rst
example/: fitness.ipynb  fitness.vec  fitness2.vec  fitness_avg.vec  normalization_full_dataset.ipynb  normalization_simulated_batch.ipynb  pbmc.ipynb  pbmc.vec  pbmc2.vec  pbmc_avg.vec  spatial_benchmark_exploration.py  spatial_cell_typing.py  spectrum.ipynb  spectrum.vec  spectrum2.vec  spectrum_avg.vec  spectrum_cancer.ipynb  tica.vec  tica2.vec  tica_avg.vec
example/embeddings/: fitness_X.vec  fitness_X2.vec  fitness_X_avg.vec  spectrum_cancer.vec  spectrum_cancer2.vec  spectrum_cancer_022.vec  spectrum_cancer_0222.vec  spectrum_cancer_022_avg.vec  spectrum_cancer_022_v2.vec  spectrum_cancer_022_v22.vec  tica.vec  tica2.vec  (+9 more)
genevector/: __init__.py  _aggregation.py  _graph_targets.py  _rust.pyi  _version.py  cache.py  data.py  embedding.py  metrics.py  model.py
scripts/: run_spatial_benchmark.py  run_spatial_eval.py
src/: lib.rs
tests/: conftest.py  test_aggregation.py  test_benchmarks_spatial_eval.py  test_benchmarks_spatial_harness.py  test_benchmarks_synthetic_layout.py  test_benchmarks_synthetic_overlay.py  test_cache.py  test_graph_targets.py  test_metrics.py
(+34 files in other folders)
