[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "genevector"
version = "1.0.0"
authors = [
  { name="Nicholas Ceglia", email="nickceglia@gmail.com" },
]
description = "Single Cell GeneVector Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scanpy>=1.9",
    "numpy>=1.21",
    "umap-learn>=0.5",
    "tqdm>=4.60",
    "seaborn>=0.12",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "scikit-learn>=1.0",
    "pandas>=1.5",
    "torch>=2.0",
    "scikit-misc>=0.1",
    "leidenalg>=0.9",
    "anndata>=0.8",
]

[project.optional-dependencies]
fast = ["numba>=0.57"]
dev = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/nceglia/genevector"
"Documentation" = "https://genevector.readthedocs.io"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "genevector._rust"
